#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
AC_PREREQ([2.71])
AC_INIT([drm-framebuffer],[1.0],[dfields@ocompany.io])
#AM_INIT_AUTOMAKE()
AC_CONFIG_SRCDIR()
AC_CONFIG_HEADERS([config.h])
#
# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_SEARCH_LIBS([strerror],[cposix])
# Autoupdate added the next two lines to ensure that your configure
# script's behavior did not change.  They are probably safe to remove.
AC_CHECK_INCLUDES_DEFAULT
AC_PROG_EGREP


# Checks for libraries.
#AM_PROG_LIBTOOL

# Set shared libraries
#AC_DISABLE_STATIC
#AC_ENABLE_SHARED

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

#AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
